[gd_scene load_steps=6 format=4 uid="uid://hoosffi071mo"]

[ext_resource type="PackedScene" uid="uid://bx1caayug8lts" path="res://Scenes/Map.tscn" id="1_1fhj5"]
[ext_resource type="Script" uid="uid://bjvjid0itnrn" path="res://Scripts/level_3.gd" id="1_16pka"]
[ext_resource type="PackedScene" uid="uid://nggnmoo5st8s" path="res://Scenes/Player.tscn" id="2_16pka"]
[ext_resource type="Script" uid="uid://dvpy8wwdvjdpv" path="res://Scenes/reset.gd" id="4_s8nj6"]
[ext_resource type="Texture2D" uid="uid://dovqnp4rid7j8" path="res://Assets/windego.png" id="5_vwg62"]

[node name="Level3" type="Node2D"]
scale = Vector2(3, 3)
script = ExtResource("1_16pka")

[node name="TileMapLayer" parent="." instance=ExtResource("1_1fhj5")]
scale = Vector2(0.75, 0.75)
tile_map_data = PackedByteArray("AAAAAAAAAAADAAAAAAABAAAAAAADAAAAAAACAAAAAAADAAAAAAADAAAAAAADAAAAAAAEAAAAAAADAAAAAAAFAAAAAAADAAAAAAAGAAAAAAADAAAAAAAHAAAAAAADAAAAAAAIAAAAAAADAAAAAAAJAAAAAAADAAAAAAAKAAAAAAADAAAAAAALAAAAAAADAAAAAAAMAAAAAAADAAAAAAANAAAAAAADAAAAAAAOAAAAAAADAAAAAAAPAAAAAAADAAAAAAAAAAEAAAADAAAAAAAAAAIAAAADAAAAAAAAAAMAAAADAAAAAAAAAAQAAAADAAAAAAAAAAUAAAADAAAAAAAAAAYAAAADAAAAAAAAAAcAAAADAAAAAAAAAAgAAAADAAAAAAAPAAgAAAABAAAAAAAPAAEAAAABAAAAAAAPAAIAAAABAAAAAAAPAAMAAAABAAAAAAAPAAQAAAADAAAAAAAPAAUAAAADAAAAAAAPAAYAAAADAAAAAAAPAAcAAAAAAAAAAAABAAEAAAABAAAAAAACAAEAAAABAAAAAAADAAEAAAABAAAAAAAEAAEAAAAAAAAAAAAFAAEAAAABAAAAAAAGAAEAAAABAAAAAAAHAAEAAAABAAAAAAAIAAEAAAABAAAAAAAJAAEAAAADAAAAAAAKAAEAAAABAAAAAAALAAEAAAABAAAAAAAMAAEAAAABAAAAAAANAAEAAAABAAAAAAAOAAEAAAABAAAAAAAOAAIAAAABAAAAAAANAAIAAAABAAAAAAAMAAIAAAABAAAAAAALAAIAAAABAAAAAAAKAAIAAAABAAAAAAAJAAIAAAADAAAAAAAIAAIAAAAAAAAAAAAHAAIAAAADAAAAAAAGAAIAAAADAAAAAAAFAAIAAAABAAAAAAAEAAIAAAADAAAAAAADAAIAAAABAAAAAAACAAIAAAABAAAAAAABAAIAAAABAAAAAAABAAMAAAABAAAAAAACAAMAAAABAAAAAAADAAMAAAABAAAAAAAEAAMAAAADAAAAAAAFAAMAAAABAAAAAAAGAAMAAAADAAAAAAAHAAMAAAADAAAAAAAIAAMAAAABAAAAAAAJAAMAAAABAAAAAAAKAAMAAAABAAAAAAALAAMAAAABAAAAAAAMAAMAAAABAAAAAAANAAMAAAABAAAAAAAOAAMAAAABAAAAAAAAAAkAAAADAAAAAAAAAAoAAAADAAAAAAAAAAsAAAADAAAAAAABAAsAAAAAAAAAAAACAAsAAAAAAAAAAAADAAsAAAAAAAAAAAAEAAsAAAAAAAAAAAAFAAsAAAAAAAAAAAAGAAsAAAAAAAAAAAAHAAsAAAABAAAAAAAIAAsAAAABAAAAAAAJAAsAAAABAAAAAAAKAAsAAAABAAAAAAALAAsAAAABAAAAAAAMAAsAAAABAAAAAAANAAsAAAABAAAAAAAOAAsAAAABAAAAAAAPAAsAAAABAAAAAAAPAAkAAAABAAAAAAAPAAoAAAABAAAAAAABAAQAAAADAAAAAAACAAQAAAADAAAAAAAEAAQAAAADAAAAAAAFAAQAAAABAAAAAAAHAAQAAAADAAAAAAAIAAQAAAADAAAAAAAJAAQAAAADAAAAAAAKAAQAAAADAAAAAAALAAQAAAADAAAAAAAMAAQAAAADAAAAAAANAAQAAAADAAAAAAAOAAQAAAADAAAAAAAOAAUAAAADAAAAAAANAAUAAAADAAAAAAALAAUAAAADAAAAAAAKAAUAAAADAAAAAAAJAAUAAAADAAAAAAAIAAUAAAABAAAAAAAHAAUAAAABAAAAAAAGAAUAAAABAAAAAAAFAAUAAAABAAAAAAAEAAUAAAABAAAAAAADAAUAAAABAAAAAAACAAUAAAABAAAAAAABAAUAAAABAAAAAAABAAYAAAAAAAAAAAACAAYAAAAAAAAAAAADAAYAAAAAAAAAAAAEAAYAAAADAAAAAAAIAAgAAAAAAAAAAAAIAAcAAAABAAAAAAAIAAYAAAABAAAAAAAHAAYAAAADAAAAAAAGAAYAAAADAAAAAAAFAAYAAAADAAAAAAAFAAcAAAADAAAAAAAEAAcAAAADAAAAAAADAAcAAAABAAAAAAACAAcAAAADAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAACAAoAAAADAAAAAAACAAkAAAADAAAAAAACAAgAAAADAAAAAAADAAgAAAABAAAAAAADAAkAAAABAAAAAAADAAoAAAABAAAAAAAEAAoAAAADAAAAAAAEAAkAAAADAAAAAAAEAAgAAAADAAAAAAAFAAgAAAADAAAAAAAFAAkAAAADAAAAAAAFAAoAAAADAAAAAAAGAAoAAAADAAAAAAAGAAkAAAADAAAAAAAGAAgAAAADAAAAAAAGAAcAAAADAAAAAAAHAAcAAAADAAAAAAAHAAgAAAABAAAAAAAHAAkAAAABAAAAAAAHAAoAAAABAAAAAAAIAAoAAAADAAAAAAAIAAkAAAADAAAAAAAJAAkAAAADAAAAAAAJAAgAAAADAAAAAAAJAAcAAAADAAAAAAAJAAYAAAADAAAAAAAKAAYAAAADAAAAAAAKAAcAAAADAAAAAAAKAAgAAAADAAAAAAAKAAkAAAADAAAAAAAKAAoAAAADAAAAAAAJAAoAAAADAAAAAAALAAoAAAABAAAAAAALAAkAAAABAAAAAAALAAgAAAABAAAAAAALAAcAAAABAAAAAAALAAYAAAADAAAAAAAMAAYAAAADAAAAAAAMAAcAAAABAAAAAAAMAAgAAAABAAAAAAAMAAkAAAABAAAAAAAMAAoAAAABAAAAAAANAAoAAAADAAAAAAANAAkAAAADAAAAAAANAAgAAAABAAAAAAANAAcAAAABAAAAAAANAAYAAAADAAAAAAAOAAYAAAADAAAAAAAOAAcAAAABAAAAAAAOAAgAAAADAAAAAAAOAAkAAAADAAAAAAAOAAoAAAADAAAAAAAMAAUAAAADAAAAAAADAAQAAAADAAAAAAAGAAQAAAADAAAAAAAAAAwAAAADAAAAAAAAAA0AAAADAAAAAAAAAA4AAAADAAAAAAAQAAAAAAADAAAAAAARAAAAAAADAAAAAAASAAAAAAADAAAAAAATAAAAAAADAAAAAAATAAEAAAADAAAAAAATAAIAAAADAAAAAAATAAMAAAADAAAAAAATAAQAAAADAAAAAAATAAUAAAADAAAAAAATAAYAAAADAAAAAAATAAcAAAADAAAAAAATAAgAAAADAAAAAAATAAkAAAADAAAAAAATAAoAAAADAAAAAAATAAsAAAADAAAAAAATAAwAAAADAAAAAAATAA0AAAADAAAAAAATAA4AAAADAAAAAAABAA4AAAADAAAAAAACAA4AAAADAAAAAAADAA4AAAADAAAAAAAEAA4AAAADAAAAAAAFAA4AAAADAAAAAAAGAA4AAAADAAAAAAAHAA4AAAADAAAAAAAIAA4AAAADAAAAAAAJAA4AAAADAAAAAAAKAA4AAAADAAAAAAALAA4AAAADAAAAAAAMAA4AAAADAAAAAAANAA4AAAADAAAAAAAOAA4AAAADAAAAAAAPAA4AAAADAAAAAAAQAA4AAAADAAAAAAARAA4AAAADAAAAAAASAA4AAAADAAAAAAARAAwAAAADAAAAAAARAAsAAAADAAAAAAARAAoAAAADAAAAAAARAAkAAAADAAAAAAARAAgAAAADAAAAAAARAAcAAAADAAAAAAARAAYAAAADAAAAAAARAAUAAAADAAAAAAARAAQAAAADAAAAAAARAAMAAAABAAAAAAARAAIAAAABAAAAAAARAAEAAAABAAAAAAAQAAEAAAABAAAAAAAQAAIAAAABAAAAAAAQAAMAAAABAAAAAAAQAAQAAAADAAAAAAAQAAUAAAADAAAAAAAQAAYAAAADAAAAAAAQAAcAAAADAAAAAAAQAAgAAAADAAAAAAAQAAkAAAADAAAAAAAQAAoAAAADAAAAAAAQAAsAAAADAAAAAAAQAAwAAAADAAAAAAAPAAwAAAADAAAAAAAOAAwAAAADAAAAAAANAAwAAAADAAAAAAAMAAwAAAADAAAAAAALAAwAAAADAAAAAAAKAAwAAAADAAAAAAAJAAwAAAADAAAAAAAIAAwAAAADAAAAAAAHAAwAAAADAAAAAAAGAAwAAAADAAAAAAAFAAwAAAADAAAAAAAEAAwAAAADAAAAAAADAAwAAAADAAAAAAACAAwAAAADAAAAAAABAAwAAAADAAAAAAABAA0AAAADAAAAAAACAA0AAAADAAAAAAADAA0AAAADAAAAAAAEAA0AAAADAAAAAAAFAA0AAAADAAAAAAAGAA0AAAADAAAAAAAHAA0AAAADAAAAAAAIAA0AAAADAAAAAAAJAA0AAAADAAAAAAAKAA0AAAADAAAAAAALAA0AAAADAAAAAAAMAA0AAAADAAAAAAANAA0AAAADAAAAAAAOAA0AAAADAAAAAAAPAA0AAAADAAAAAAAQAA0AAAADAAAAAAARAA0AAAADAAAAAAASAA0AAAADAAAAAAASAAwAAAADAAAAAAASAAsAAAADAAAAAAASAAoAAAADAAAAAAASAAkAAAADAAAAAAASAAgAAAADAAAAAAASAAcAAAADAAAAAAASAAYAAAADAAAAAAASAAUAAAADAAAAAAASAAQAAAADAAAAAAASAAMAAAADAAAAAAASAAIAAAADAAAAAAASAAEAAAADAAAAAAA=")

[node name="PlayerFlag" parent="TileMapLayer" index="0"]
tile_map_data = PackedByteArray("AAABAAMAAAACAAAAAAACAAMAAAACAAAAAAAGAAEAAAACAAAAAAAEAAUAAAAEAAAAAAADAAcAAAAFAAAAAAAHAAUAAAAEAAAAAAAHAAoAAAADAAAAAAALAAoAAAADAAAAAAAMAAoAAAADAAAAAAAMAAcAAAAEAAAAAAALAAEAAAAEAAAAAAAQAAMAAAABAAAAAAA=")

[node name="Reset" type="Button" parent="."]
offset_left = 290.66666
offset_top = 152.0
offset_right = 344.66666
offset_bottom = 183.0
text = "RESET"
script = ExtResource("4_s8nj6")

[node name="Node2D" type="Node2D" parent="."]
scale = Vector2(0.75, 0.75)

[node name="Player" parent="Node2D" instance=ExtResource("2_16pka")]
position = Vector2(24, 24)
scale = Vector2(0.125, 0.125)
tile_size = 16.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 2
offset_left = 245.33334
offset_top = 5.3333335
offset_right = 285.33334
offset_bottom = 45.333332

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "1. Touch red tiles"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "2. Moving from 
    red to red is not safe"

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "3. Do not touch the 
    flag"

[node name="Label4" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "4. Odd rules are true 
    on even steps"

[node name="Steps" type="Label" parent="."]
offset_left = 6.0000005
offset_top = 195.66667
offset_right = 94.333336
offset_bottom = 212.66667
theme_override_font_sizes/font_size = 12
text = "Steps: 0"

[node name="Windego" type="Sprite2D" parent="."]
visible = false
position = Vector2(196.00002, 119)
scale = Vector2(1.5619849, 0.3432586)
texture = ExtResource("5_vwg62")

[connection signal="pressed" from="Reset" to="Reset" method="_on_pressed"]
[connection signal="blue_entered" from="Node2D/Player" to="." method="_on_player_blue_entered"]
[connection signal="flag_entered" from="Node2D/Player" to="." method="_on_player_flag_entered"]
[connection signal="inputed" from="Node2D/Player" to="." method="_on_player_inputed"]
[connection signal="red_entered" from="Node2D/Player" to="." method="_on_player_red_entered"]

[editable path="TileMapLayer"]
